--- a/css/style.css
+++ b/css/style.css
@@ -142,14 +142,14 @@ nav {
 /* about page */
 
 .bio {
-  margin-top: 3.8em;
+  margin-top: 3.5em;
   max-width: 700px;
-  line-height: 150%;
+  line-height: 160%;
 }
 
 #bio_des{
   padding-top: 1em;
-  font-weight: normal;
+  font-weight: lighter;
   max-width: 400px;
   line-height: 180%;
 }
